# opensearch-dashboards-cf-auth-proxy

./: .env-sample  .gitignore  DEVELOPMENT.md  Procfile  README.md  dev  dev-requirements.txt  local-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dependabot-auto-merge.yml
cf/: README.md  elasticsearch-manifest.yml  kibana-manifest.yml  manifest.yml  opensearch-dashboards-manifest.yml  opensearch-manager-manifest.yml  opensearch-manifest.yml  opensearch-node-manifest.yml  proxy-manifest.yml  secrets-sample.yml
cf_auth_proxy/: __init__.py  app.py  cf.py  config.py  logging.py  proxy.py  roles.py  token.py  uaa.py
ci/: config.yml  e2e.sh  init-config.sh  init-config.yml  pipeline.yml  provision-cf-access.sh  seed-es-data.sh  seed-opensearch-data.sh  test.sh  update-networking.sh  update-networking.yml  update-test-user-passwords.sh
docker/: docker-compose.yml
docker/elasticsearch/: config.yml  dockerfile  roles.yml  roles_mapping.yml
docker/kibana/: dockerfile  kibana.yml
docker/nginx/: nginx.conf
docker/opensearch/: config.yml  dockerfile  log4j2.properties  roles.yml  roles_mapping.yml
docker/opensearch_dashboards/: dockerfile  opensearch_dashboards.yml
e2e/: __init__.py  conftest.py  init-config.sh  test_discover_filters_logs.py  test_setup.py  user.py  utils.py
kibana_cf_auth_proxy/: app.py  cf.py  config.py  extensions.py  headers.py  proxy.py  uaa.py
opensearch_dashboards_cf_auth_proxy/: app.py
pip-tools/: dev-requirements.in  requirements.in
scripts/: download-e2e-ci-results.sh
src/cf_auth_proxy/: app.py  cf.py  config.py  extensions.py  proxy.py  uaa.py
tests/: __init__.py  conftest.py
tests/unit/: conftest.py  test_app.py  test_authn.py  test_callback.py  test_cf.py  test_config.py  test_headers.py  test_proxy.py  test_uaa.py
