[metadata]
name = kibana_cf_auth_proxy
version = attr: src.VERSION
description = Authentication proxy for use with Kibana, Cloudfoundry, and Open Distro for Elasticsearch
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = kibana, cloudfoundry
license = CC0 1.0 Universal
classifiers =
    Development Status :: 1 - Planning
    Framework :: Flask
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = file: requirements.txt
